--- a/publications.html
+++ b/publications.html
@@ -79,18 +79,16 @@
               >
             </li>
             <li>
-              <a class="nav-item nav-link" href="/gallery.html">
-                <strong>Gallery</strong></a
-              >
+              <a class="nav-item nav-link" href="/gallery.html"> Gallery</a>
             </li>
             <li>
-              <a class="nav-item nav-link" href="/publications.html"
-                >Publications</a
+              <a class="nav-item nav-link" href="/publications.html">
+                <strong>Publications </strong></a
               >
             </li>
             <li>
               <a
-                class="nav-item nav-link disabled"
+                class="nav-item nav-link"
                 href="#"
                 tabindex="-1"
                 aria-disabled="true"
@@ -102,6 +100,191 @@
       </nav>
     </div>
 
-    <div class="wrapper text-center mb-5 pt-4 pb-4"></div>
+    <div class="wrapper text-center pt-3 pb-3">
+      <div class="ms-5">
+        <h2>
+          The Space Syntax of urban parks; identifying areas inducing sense of
+          fear of crime in visitors (a case study of Tappeh-Bashi Park in
+          Naghadeh)
+        </h2>
+        <p>
+          <strong>Authors: </strong><strong>Ahmad Farkhondeh</strong>, Mehran
+          Fateminia, Zahra Hosseingholipour <br />
+          Journal of Fine Arts: Visual Arts Accepted in November 2023
+        </p>
+        <p>
+          <a
+            class="btn btn-customized mt-4"
+            data-bs-toggle="collapse"
+            href="#collapseExample"
+            role="button"
+            aria-expanded="false"
+            aria-controls="collapseExample"
+          >
+            <strong>Abstract</strong>
+          </a>
+          <a
+            href="https://jfava.ut.ac.ir/article_94610.html?lang=en"
+            class="btn btn-customized mt-4"
+            target="_blank"
+          >
+            <strong> Link to article</strong>
+          </a>
+        </p>
+        <div class="collapse" id="collapseExample">
+          <div class="card card-body">
+            <p>
+              <strong>T</strong>he syntax of spaces is one of the significant
+              factors affecting visitors' sense of security in urban parks. Due
+              to the vitality and green nature of parks, they are expected to
+              provide more sense of peace and security to visitors than other
+              urban spaces; However, Tappeh-Bashi Park in the city of Naghadeh,
+              located in West Azarbaijan province, Iran, is a counterexample.
+              This park, despite its glory days not so far past, has become a
+              place for addicts and criminals because of a lack of surveillance,
+              ethnic conflicts, and the stoning of two people there. Recently,
+              measures have been taken by the municipality to improve the
+              security of the park, such as taking out criminals, implementing
+              some sports facilities, and planting trees, and flowers. Although
+              this has reduced the rate of crime significantly, citizens still
+              do not desire to visit this park due to their sense of fear of
+              possible crimes. The root of this issue is both subjective and
+              objective and this study's focus is on the objective aspect. The
+              purpose is to find the areas inducing a sense of fear of crime in
+              visitors in the case study by assessing the role of the objective
+              factors related to the spatial syntax of the park in both physical
+              and visual dimensions. To do so, the qualities affecting the sense
+              of fear in visitors of Tappeh-Bashi Park and their extracted
+              indicators were evaluated by space syntax technique and through
+              Depthmap software. In this research, the four qualities of
+              accessibility, choice, controllability, and integration in the
+              physical dimension, and the qualities of lighting, visibility, and
+              attraction in the visual dimension were evaluated. First of all,
+              the base map of the site was updated, and the axial maps of
+              indicators including connectivity, mean depth, metric depth,
+              permeability, and mysteriousness were prepared in DepthMap
+              Software and valued in Geographic Information System (GIS). Next,
+              the obtained quality maps were weighed and overlaid to get the
+              final axial map. Then, the visual graph of the clustering
+              coefficient indicator was combined with the final map, which gave
+              us three areas inducing a sense of fear among visitors. Finally,
+              three areas were also examined in terms of visibility indicators
+              such as maximum radial line, compactness, and occlusivity, which
+              gave us a good insight to analyse the potentials of each area for
+              reducing sense of fear. For findings validation, the agent
+              analysis of the site was applied, which proved area two has the
+              potential for designing against the sense of fear of crime with
+              the aim of enhancing social interaction. The site also was
+              assessed according to the intensity of lighting at night showing
+              that area three lacks proper lighting. The results showed that the
+              dead-end and undefined routes in the park have reduced the
+              mobility and integrity of pedestrian paths. Moreover, spaces with
+              low levels of lighting at night, spaces that lack natural
+              surveillance, and mysterious and abandoned spaces in the park have
+              the highest potential to induce feelings of insecurity and a sense
+              of fear of crime.
+              <br />
+              <br />
+              <strong> Keywords: </strong> Fear of Crime, Sense of Security,
+              Space Syntax, Tappeh-Bashi Park, Urban Parks
+            </p>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="wrapper text-center pt-3 pb-3">
+      <div class="ms-5">
+        <h2>A framework of urban furniture design for crime reduction</h2>
+        <p>
+          <strong>Authors:</strong> Ali Faraji,
+          <strong>Ahmad Farkhondeh</strong> <br />
+          8th International Conference on Mechanical, Construction Industrial &
+          Civil Engineering Proceeding, Istanbul, Turkey Published in August
+          2021
+        </p>
+        <p>
+          <a
+            class="btn btn-customized mt-4"
+            data-bs-toggle="collapse"
+            href="#collapseExamples"
+            role="button"
+            aria-expanded="false"
+            aria-controls="collapseExamples"
+          >
+            <strong>Abstract</strong>
+          </a>
+          <a
+            href=" https://en.civilica.com/doc/1267610/"
+            class="btn btn-customized mt-4"
+            target="_blank"
+          >
+            <strong> Link to article</strong>
+          </a>
+        </p>
+        <div class="collapse" id="collapseExamples">
+          <div class="card card-body">
+            <p>
+              <strong>C</strong>rime increasing and its consequences is one of
+              the obvious manifestations of urbanization development. The
+              inefficiency of urban spaces such as inefficient urban furniture
+              and disregard for its practical and aesthetic values has been
+              recognized as one of the most influential factors in crime in
+              cities. Lack of context-based design, ignoring the needs of
+              residents, and mere copying of modern equipment, has emptied the
+              furniture of today's cities from aesthetic and functional values
+              to inefficient elements and visual and even environmental
+              pollutants. This leads to abandonment of urban spaces and non-use
+              of equipment, and there is no doubt that there is a high
+              correlation between the absence of humans as observer eyes in
+              urban space and the increase in crime and sabotage in these
+              spaces. The purpose of this study is to provide an urban furniture
+              design framework to help urban furniture design` to prevent crime
+              and improve quality of life. The method of this research is based
+              on a descriptive aspect rather than an exploratory one and
+              introduces the necessary principles, features, and considerations
+              in the field of anti-crime urban furniture. The data used for
+              explanation have been obtained from collecting, describing, and
+              organizing documentary and library resources in the form of
+              subject research. To maintain the effectiveness of urban spaces,
+              the physical and psychological aspects must be compatible between
+              the qualitative elements and the social and cultural
+              characteristics of the citizens. Psychologically, increasing
+              traffic and lighting in environments with high crime rates and
+              designing happy environments can prevent crime and reduce fear of
+              crime. It is noted that the use of urban furniture as one of the
+              tools of environmental design in crime prevention is considered, a
+              design guide in five dimensions including practical criteria about
+              the design of urban furniture with a crime prevention approach is
+              presented. <br />
+              <br />
+              <strong>Keywords:</strong> Urban furniture design, urban space,
+              crime reduction, security, Industrial Design.
+            </p>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="wrapper text-center pt-3 pb-3">
+      <div class="ms-5">
+        <h2>
+          Evaluating the Impact of Citizen's Sense of Attachment and
+          Satisfaction of Tappeh-Bashi Park on their Sense of Social Security
+        </h2>
+        <p>
+          <strong>Authors:</strong>
+          <strong>Ahmad Farkhondeh</strong>, Zahra Hosseingholipour, Mehran
+          Fateminia<br />
+        </p>
+        <p>
+          <a
+            href=" https://en.civilica.com/doc/1267610/"
+            class="btn btn-customized mt-4"
+            target="_blank"
+          >
+            <strong> Link to article</strong>
+          </a>
+        </p>
+      </div>
+    </div>
   </body>
 </html>
