added all navbars

--- a/projects.html
+++ b/projects.html
@@ -40,63 +40,61 @@
   <body>
     <div class="container">
       <nav class="navbar navbar-expand-lg navbar-light nav-color m-0">
-        <a class="navbar-brand p-0" href="#">
-          <img
-            src="images/ahmad-logo.png"
-            alt="logo"
-            class="img-fluid p-0"
-            width="40px"
-        /></a>
-        <button
-          class="navbar-toggler"
-          type="button"
-          data-toggle="collapse"
-          data-target="#navbarNavAltMarkup"
-          aria-controls="navbarNavAltMarkup"
-          aria-expanded="false"
-          aria-label="Toggle navigation"
-        >
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-          <div class="navbar-nav">
-            <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="/index.html"
-                >Home
-              </a>
-            </li>
-            <li>
-              <a class="nav-item nav-link" href="/portfolio.html">Portfolio</a>
-            </li>
-            <li>
-              <a class="nav-item nav-link" href="/projects.html">
-                <strong>Other Projects</strong></a
-              >
-            </li>
-            <li>
-              <a class="nav-item nav-link" href="/certificates.html"
-                >Certificates</a
-              >
-            </li>
-            <li>
-              <a class="nav-item nav-link" href="/gallery.html">Gallery</a>
-            </li>
-            <li>
-              <a class="nav-item nav-link" href="#">Publications</a>
-            </li>
-            <li>
-              <a
-                class="nav-item nav-link disabled"
-                href="#"
-                tabindex="-1"
-                aria-disabled="true"
-                >Contact Me</a
-              >
-            </li>
+        <div class="container-fluid">
+          <a class="navbar-brand" href="#"
+            ><img
+              src="/images/ahmad-logo.png"
+              alt="logo"
+              class="img-fluid p-0"
+              width="40px"
+          /></a>
+          <button
+            class="navbar-toggler"
+            type="button"
+            data-bs-toggle="collapse"
+            data-bs-target="#navbarNavDropdown"
+            aria-controls="navbarNavDropdown"
+            aria-expanded="false"
+            aria-label="Toggle navigation"
+          >
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarNavDropdown">
+            <ul class="navbar-nav">
+              <li class="nav-item">
+                <a
+                  class="nav-link active"
+                  aria-current="page"
+                  href="/index.html"
+                  >Home</a
+                >
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="/portfolio.html">Portfolio</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="/projects.html"
+                  ><strong>Other Projects</strong></a
+                >
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="/certificates.html">Certificates</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="/gallery.html">Gallery</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="/publications.html">Publications</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="/contactme.html">Contact Me</a>
+              </li>
+            </ul>
           </div>
         </div>
       </nav>
     </div>
+
     <div class="wrapper text-center pt-5 pb-4">
       <h2 class="mb-3">Orsey</h2>
       <p class="project-description">
