added some details

--- a/index.html
+++ b/index.html
@@ -156,8 +156,17 @@
             <div class="col-sm-6"><p>Serious Game Design</p></div>
           </div>
         </div>
+        <h3 class="mt-4">Current Situation</h3>
+        <p class="text-start mt-2">
+          Getting prepared for the IELTS exam <br />
+          Working on my second extracted article from my master's thesis
+        </p>
+        <h3 class="text-center">
+          <a href="images/cv.pdf" class="btn btn-customized mt-4"
+            ><strong>Download the complete CV</strong></a
+          >
+        </h3>
       </div>
-      <a href="images/cv.pdf">link to Cv</a>
     </div>
   </body>
 </html>
