--- a/publications.html
+++ b/publications.html
@@ -271,9 +271,9 @@
           Fateminia<br />
         </p>
         <p>
-          <a href=" #" class="btn btn-customized mt-4" target="_blank">
+          <button class="btn btn-customized mt-4" target="_blank">
             <strong>In Preparation</strong>
-          </a>
+          </button>
         </p>
       </div>
     </div>
