--- a/certificates.html
+++ b/certificates.html
@@ -336,60 +336,65 @@
 
           <div class="col-md-6">
             <h2 class="mt-5 text-center">Sports</h2>
-            <div class="d-flex justify-content-center">
-              <div class="card m-3" style="width: 12rem">
-                <img
-                  class="card-img-top shadow-sm p-1 d-none d-sm-block"
-                  src="images/certificates/6-sports/01.jpg"
-                  alt="Card image cap"
-                />
+            <div class="row">
+              <div class="col-md-4">
+                <div class="card m-1" style="width: 12rem">
+                  <img
+                    class="card-img-top shadow-sm p-1 d-none d-sm-block"
+                    src="images/certificates/6-sports/01.jpg"
+                    alt="Card image cap"
+                  />
 
-                <div class="card-body">
-                  <h4 class="card-text p-1 mb-3 pb-3">
-                    Membership in Sports Association from 2016 to 2019
-                  </h4>
-                  <a
-                    href="images/certificates/6-sports/1.Membership in Sports Association from 2016 to 2019.jpg"
-                    class="btn btn-customized shadow-sm"
-                    >See the certificate</a
-                  >
+                  <div class="card-body">
+                    <h4 class="card-text p-1 mb-3 pb-3">
+                      Membership in Sports Association from 2016 to 2019
+                    </h4>
+                    <a
+                      href="images/certificates/6-sports/1.Membership in Sports Association from 2016 to 2019.jpg"
+                      class="btn btn-customized shadow-sm"
+                      >See the certificate</a
+                    >
+                  </div>
                 </div>
               </div>
+              <div class="col-md-4">
+                <div class="card m-1" style="width: 12rem">
+                  <img
+                    class="card-img-top shadow-sm p-1 d-none d-sm-block"
+                    src="images/certificates/6-sports/02.jpg"
+                    alt="Card image cap"
+                  />
 
-              <div class="card m-3" style="width: 12rem">
-                <img
-                  class="card-img-top shadow-sm p-1 d-none d-sm-block"
-                  src="images/certificates/6-sports/02.jpg"
-                  alt="Card image cap"
-                />
-
-                <div class="card-body">
-                  <h4 class="card-text p-1 mb-3 pb-3">
-                    Rank First in Table Tennis Competition, 2018
-                  </h4>
-                  <a
-                    href="images/certificates/6-sports/2.Ranked First in Table Tennis Competition, 2018.jpg"
-                    class="btn btn-customized shadow-sm"
-                    >See the certificate</a
-                  >
+                  <div class="card-body">
+                    <h4 class="card-text p-1 mb-3 pb-3">
+                      Rank First in Table Tennis Competition, 2018
+                    </h4>
+                    <a
+                      href="images/certificates/6-sports/2.Ranked First in Table Tennis Competition, 2018.jpg"
+                      class="btn btn-customized shadow-sm"
+                      >See the certificate</a
+                    >
+                  </div>
                 </div>
               </div>
-              <div class="card m-3" style="width: 12rem">
-                <img
-                  class="card-img-top shadow-sm p-1 d-none d-sm-block"
-                  src="images/certificates/6-sports/03.jpg"
-                  alt="Card image cap"
-                />
+              <div class="col-md-4">
+                <div class="card m-1" style="width: 12rem">
+                  <img
+                    class="card-img-top shadow-sm p-1 d-none d-sm-block"
+                    src="images/certificates/6-sports/03.jpg"
+                    alt="Card image cap"
+                  />
 
-                <div class="card-body">
-                  <h4 class="card-text p-1 mb-3 pb-3">
-                    Rank First in Table Tennis Competition, 2017
-                  </h4>
-                  <a
-                    href="images/certificates/6-sports/3.Ranked First in Table Tennis Competition, 2017.jpg"
-                    class="btn btn-customized shadow-sm"
-                    >See the certificate</a
-                  >
+                  <div class="card-body">
+                    <h4 class="card-text p-1 mb-3 pb-3">
+                      Rank First in Table Tennis Competition, 2017
+                    </h4>
+                    <a
+                      href="images/certificates/6-sports/3.Ranked First in Table Tennis Competition, 2017.jpg"
+                      class="btn btn-customized shadow-sm"
+                      >See the certificate</a
+                    >
+                  </div>
                 </div>
               </div>
             </div>
@@ -400,61 +405,72 @@
       <div class="container">
         <h2 class="mt-5 text-center">Other Certificates</h2>
         <div class="d-flex justify-content-center">
-          <div class="card m-3" style="width: 12rem">
-            <img
-              class="card-img-top shadow-sm p-1 d-none d-sm-block"
-              src="images/certificates/7-others or (participations)/01.jpg"
-              alt="Card image cap"
-            />
+          <div class="row">
+            <div class="col-md-2"></div>
 
-            <div class="card-body">
-              <h4 class="card-text p-1 mb-3 pb-4">
-                Competition of Iran International Handicrafts Festival, 2021
-              </h4>
-              <a
-                href="images/certificates/7-others or (participations)/1.First Iran International Handicrafts Festival, 2021.jpg"
-                class="btn btn-customized shadow-sm"
-                >See the certificate</a
-              >
+            <div class="col-md-3">
+              <div class="card m-3" style="width: 12rem">
+                <img
+                  class="card-img-top shadow-sm p-1 d-none d-sm-block"
+                  src="images/certificates/7-others or (participations)/01.jpg"
+                  alt="Card image cap"
+                />
+
+                <div class="card-body">
+                  <h4 class="card-text p-1 mb-3">
+                    Competition of Iran International Handicrafts Festival, 2021
+                  </h4>
+                  <a
+                    href="images/certificates/7-others or (participations)/1.First Iran International Handicrafts Festival, 2021.jpg"
+                    class="btn btn-customized shadow-sm"
+                    >See the certificate</a
+                  >
+                </div>
+              </div>
             </div>
-          </div>
+            <div class="col-md-3">
+              <div class="card m-3" style="width: 12rem">
+                <img
+                  class="card-img-top shadow-sm p-1 d-none d-sm-block"
+                  src="images/certificates/7-others or (participations)/02.jpg"
+                  alt="Card image cap"
+                />
 
-          <div class="card m-3" style="width: 12rem">
-            <img
-              class="card-img-top shadow-sm p-1 d-none d-sm-block"
-              src="images/certificates/7-others or (participations)/02.jpg"
-              alt="Card image cap"
-            />
-
-            <div class="card-body">
-              <h4 class="card-text p-1 mb-3">
-                National Expert Competition on the Role of Industrial Design in
-                Handicrafts, 2018
-              </h4>
-              <a
-                href="images/certificates/7-others or (participations)/2.Certificate of Participation in 3rd Meeting and National Expert Competition on the Role of Industrial Design in Handicrafts, 2018.jpg"
-                class="btn btn-customized shadow-sm"
-                >See the certificate</a
-              >
+                <div class="card-body">
+                  <h4 class="card-text p-1">
+                    National Expert Competition on the Role of Industrial Design
+                    in Handicrafts, 2018
+                  </h4>
+                  <a
+                    href="images/certificates/7-others or (participations)/2.Certificate of Participation in 3rd Meeting and National Expert Competition on the Role of Industrial Design in Handicrafts, 2018.jpg"
+                    class="btn btn-customized shadow-sm"
+                    >See the certificate</a
+                  >
+                </div>
+              </div>
             </div>
-          </div>
-          <div class="card m-3" style="width: 12rem">
-            <img
-              class="card-img-top shadow-sm p-1 d-none d-sm-block"
-              src="images/certificates/6-sports/03.jpg"
-              alt="Card image cap"
-            />
 
-            <div class="card-body">
-              <h4 class="card-text p-1 mb-4 pb-4">
-                Rank First in Table Tennis Competition, 2017
-              </h4>
-              <a
-                href="images/certificates/6-sports/3.Ranked First in Table Tennis Competition, 2017.jpg"
-                class="btn btn-customized shadow-sm"
-                >See the certificate</a
-              >
+            <div class="col-md-3">
+              <div class="card m-3" style="width: 12rem">
+                <img
+                  class="card-img-top shadow-sm p-1 d-none d-sm-block"
+                  src="images/certificates/6-sports/03.jpg"
+                  alt="Card image cap"
+                />
+
+                <div class="card-body">
+                  <h4 class="card-text p-1 mb-4 pb1">
+                    Rank First in Table Tennis Competition, 2017
+                  </h4>
+                  <a
+                    href="images/certificates/6-sports/3.Ranked First in Table Tennis Competition, 2017.jpg"
+                    class="btn btn-customized shadow-sm"
+                    >See the certificate</a
+                  >
+                </div>
+              </div>
             </div>
+            <div class="col-md-1"></div>
           </div>
         </div>
       </div>
