--- a/index.html
+++ b/index.html
@@ -168,5 +168,25 @@
         </h3>
       </div>
     </div>
+
+    <div class="container">
+      <div class="contact-me d-flex justify-content-between">
+        <div class="d-flex justify-content-center">
+          <div>
+            <img
+              src="/images/profile-pic.png"
+              alt=""
+              class="img-fluid d-inline"
+              width="80px"
+            />
+          </div>
+          <div>
+            <p>Ahmad Farkhondeh <br />Industrial Designer</p>
+          </div>
+        </div>
+
+        <div><a href="emailto">ahmad </a> <br />+989368125532</div>
+      </div>
+    </div>
   </body>
 </html>
