social links of footer were added

--- a/index.html
+++ b/index.html
@@ -168,25 +168,54 @@
         </h3>
       </div>
     </div>
+    <footer>
+      <div class="container">
+        <div class="text-muted mt-5 d-flex justify-content-between">
+          <div class="d-flex justify-content-center ms-5">
+            <div>
+              <img
+                src="/images/profile-pic.png"
+                alt=""
+                class="img-fluid d-inline p-2 m-0"
+                width="80px"
+              />
+            </div>
+            <div>
+              <p class="contact-me mt-3 me-5 pe-5">
+                Ahmad Farkhondeh <br />Industrial Designer
+              </p>
+            </div>
+          </div>
 
-    <div class="container">
-      <div class="contact-me d-flex justify-content-between">
-        <div class="d-flex justify-content-center">
+          <div class="contact-me">
+            <i class="fa fa-envelope email-icon" aria-hidden="true"></i> ahmad
+
+            <br />
+            <i class="fa fa-phone" aria-hidden="true"></i>
+            +989368125532
+          </div>
+        </div>
+        <div class="social-links d-flex justify-content-center">
           <div>
-            <img
-              src="/images/profile-pic.png"
-              alt=""
-              class="img-fluid d-inline"
-              width="80px"
-            />
+            <a href=""
+              ><i
+                class="fa-brands fa-linkedin m-2 linkedin-icon"
+                aria-hidden="true"
+              ></i
+            ></a>
           </div>
           <div>
-            <p>Ahmad Farkhondeh <br />Industrial Designer</p>
+            <i class="fa-brands fa-researchgate m-2"></i>
+          </div>
+          <div>
+            <i class="fa-brands fa-orcid m-2"></i>
           </div>
         </div>
 
-        <div><a href="emailto">ahmad </a> <br />+989368125532</div>
+        <p class="contact-me text-center text-muted mb-5">
+          © Ahmad Farkhondeh All Rights Reserved <br />coded by Ahmad Farkhondeh
+        </p>
       </div>
-    </div>
+    </footer>
   </body>
 </html>
