added footer icons

--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
           Working on my second extracted article from my master's thesis
         </p>
         <h3 class="text-center">
-          <a href="images/cv.pdf" class="btn btn-customized mt-4"
+          <a href="images/cv.pdf" class="btn btn-customized mt-5"
             ><strong>Download the complete CV</strong></a
           >
         </h3>
@@ -188,7 +188,8 @@
           </div>
 
           <div class="contact-me">
-            <i class="fa fa-envelope email-icon" aria-hidden="true"></i> ahmad
+            <i class="fa fa-envelope email-icon pe-2 pb-2" aria-hidden="true"></i
+            >ahmadfarkhondeh1997@gmail.com
 
             <br />
             <i class="fa fa-phone" aria-hidden="true"></i>
@@ -198,17 +199,14 @@
         <div class="social-links d-flex justify-content-center">
           <div>
             <a href=""
-              ><i
-                class="fa-brands fa-linkedin m-2 linkedin-icon"
-                aria-hidden="true"
-              ></i
+              ><i class="fa-brands fa-linkedin m-2" aria-hidden="true"></i
             ></a>
           </div>
           <div>
-            <i class="fa-brands fa-researchgate m-2"></i>
+            <a href=""> <i class="fa-brands fa-researchgate m-2"></i></a>
           </div>
           <div>
-            <i class="fa-brands fa-orcid m-2"></i>
+            <a href=""> <i class="fa-brands fa-orcid m-2"></i></a>
           </div>
         </div>
 
