added background logos

--- a/index.html
+++ b/index.html
@@ -36,6 +36,21 @@
       crossorigin="anonymous"
     ></script>
     <title>Portfolio-Ahmad-Farkhondeh2024</title>
+    <style>
+     .master{background-image: url(images/Tehran-logo7.png);
+    background-repeat: no-repeat;
+    background-position: 800px;
+    background-size: 19%;
+  
+}
+    .bachelore{
+      background-image: url(/images/Isfahan-Logo7.png);
+        background-repeat: no-repeat;
+    background-position: 845px;
+    background-size: 11%;
+    }  
+      
+      </style>
   </head>
   <body>
     <div class="container">
@@ -101,7 +116,7 @@
       </video>
       <div class="cv m-5">
         <h3 class="text-start">Education</h3>
-        <p class="text-start">
+        <p class="text-start master">
           <strong>M. A. in Industrial Design </strong>| 2020-2023
           <br />
 
@@ -118,7 +133,7 @@
           <br />
           ▪ Supervisor: Dr. Mehran Fateminia
         </p>
-        <p class="text-start mt-3">
+        <p class="text-start mt-5 bachelore">
           <strong> B. A. in Industrial Design</strong> | 2015-2020
           <br />
           ▪ Art University of Isfahan, Isfahan, Iran
