--- a/certificates.html
+++ b/certificates.html
@@ -87,7 +87,7 @@
                 <a class="nav-link" href="/publications.html">Publications</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="/contactme.html">Contact Me</a>
+                <a class="nav-link" href="/index.html#contact-me">Contact Me</a>
               </li>
             </ul>
           </div>
