--- a/publications.html
+++ b/publications.html
@@ -87,7 +87,7 @@
                 >
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="/contactme.html">Contact Me</a>
+                <a class="nav-link" href="/index.html#contact-me">Contact Me</a>
               </li>
             </ul>
           </div>
@@ -129,7 +129,7 @@
         <div class="collapse" id="collapseExample">
           <div class="card card-body">
             <p>
-              <strong>T</strong>he syntax of spaces is one of the significant
+              <strong> <span class="big-letter">T</span></strong>he syntax of spaces is one of the significant
               factors affecting visitors' sense of security in urban parks. Due
               to the vitality and green nature of parks, they are expected to
               provide more sense of peace and security to visitors than other
@@ -219,7 +219,7 @@
         <div class="collapse" id="collapseExamples">
           <div class="card card-body">
             <p>
-              <strong>C</strong>rime increasing and its consequences is one of
+              <strong><span class="big-letter">C</span></strong>rime increasing and its consequences is one of
               the obvious manifestations of urbanization development. The
               inefficiency of urban spaces such as inefficient urban furniture
               and disregard for its practical and aesthetic values has been
