--- a/portfolio.html
+++ b/portfolio.html
@@ -39,7 +39,10 @@
   </head>
   <body>
     <div class="container">
-      <nav class="navbar navbar-expand-lg navbar-light nav-color m-0">
+      <nav
+        class="navbar navbar-expand-lg navbar-light nav-color m-0"
+        id="top-section"
+      >
         <div class="container-fluid">
           <a class="navbar-brand" href="#"
             ><img
@@ -87,212 +90,280 @@
                 <a class="nav-link" href="/publications.html">Publications</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="/index.html#contact-me">Contact Me</a>
+                <a class="nav-link" href="/portfolio.html#contact-me"
+                  >Contact Me</a
+                >
               </li>
             </ul>
           </div>
         </div>
       </nav>
     </div>
-
-    <div class="text-center mb-5 pt-2 pb-4">
+    <div class="text-center pt-2">
       <img
         src="images/portfolio/01.jpg"
-        width="70%"
+        width="80%"
         alt="01"
         class="img-fluid mb-2"
       />
       <img
         src="images/portfolio/02.jpg"
-        width="70%"
+        width="80%"
         alt="02"
         class="img-fluid mb-2"
       />
       <img
         src="images/portfolio/03.jpg"
-        width="70%"
+        width="80%"
         alt="03"
         class="img-fluid mb-2"
       />
       <img
         src="images/portfolio/04.jpg"
-        width="70%"
+        width="80%"
         alt="04"
         class="img-fluid mb-2"
       />
       <img
         src="images/portfolio/05.jpg"
-        width="70%"
+        width="80%"
         alt=""
         class="img-fluid mb-2"
       />
       <img
         src="images/portfolio/06.jpg"
-        width="70%"
+        width="80%"
         alt=""
         class="img-fluid mb-2"
       />
       <img
         src="images/portfolio/07.jpg"
-        width="70%"
+        width="80%"
         alt=""
         class="img-fluid mb-2"
       />
       <video
         src="images/portfolio/08-Balancer-video.MP4"
-        width="70%"
+        width="80%"
         controls
       ></video>
       <img
         src="images/portfolio/08.jpg"
-        width="70%"
+        width="80%"
         alt=""
         class="img-fluid mb-2"
       />
       <img
         src="images/portfolio/09.jpg"
-        width="70%"
+        width="80%"
         alt=""
         class="img-fluid mb-2"
       />
       <img
         src="images/portfolio/10.jpg"
-        width="70%"
+        width="80%"
         alt=""
         class="img-fluid mb-2"
       />
       <img
         src="images/portfolio/11.jpg"
-        width="70%"
+        width="80%"
         alt=""
         class="img-fluid mb-2"
       />
       <img
         src="images/portfolio/12.jpg"
-        width="70%"
+        width="80%"
         alt=""
         class="img-fluid mb-2"
       />
       <img
         src="images/portfolio/13.jpg"
-        width="70%"
+        width="80%"
         alt=""
         class="img-fluid mb-2"
       />
       <img
         src="images/portfolio/14.jpg"
-        width="70%"
+        width="80%"
         alt=""
         class="img-fluid mb-2"
       />
       <img
         src="images/portfolio/15.jpg"
-        width="70%"
+        width="80%"
         alt=""
         class="img-fluid mb-2"
       />
       <img
         src="images/portfolio/16.jpg"
-        width="70%"
+        width="80%"
         alt=""
         class="img-fluid mb-2"
       />
       <img
         src="images/portfolio/17.jpg"
-        width="70%"
+        width="80%"
         alt=""
         class="img-fluid mb-2"
       />
       <img
         src="images/portfolio/18.jpg"
-        width="70%"
+        width="80%"
         alt=""
         class="img-fluid mb-2"
       />
       <img
         src="images/portfolio/19.jpg"
-        width="70%"
+        width="80%"
         alt=""
         class="img-fluid mb-2"
       />
       <img
         src="images/portfolio/20.jpg"
-        width="70%"
+        width="80%"
         alt=""
         class="img-fluid mb-2"
       />
       <img
         src="images/portfolio/21.jpg"
-        width="70%"
+        width="80%"
         alt=""
         class="img-fluid mb-2"
       />
       <video
         src="images/portfolio/22-Alfred-video.MP4"
-        width="70%"
+        width="80%"
         controls
       ></video>
       <img
         src="images/portfolio/22.jpg"
-        width="70%"
+        width="80%"
         alt=""
         class="img-fluid mb-2"
       />
       <img
         src="images/portfolio/23.jpg"
-        width="70%"
+        width="80%"
         alt=""
         class="img-fluid mb-2"
       />
       <img
         src="images/portfolio/24.jpg"
-        width="70%"
+        width="80%"
         alt=""
         class="img-fluid mb-2"
       />
       <img
         src="images/portfolio/25.jpg"
-        width="70%"
+        width="80%"
         alt=""
         class="img-fluid mb-2"
       />
       <img
         src="images/portfolio/26.jpg"
-        width="70%"
+        width="80%"
         alt=""
         class="img-fluid mb-2"
       />
       <img
         src="images/portfolio/27.jpg"
-        width="70%"
+        width="80%"
         alt=""
         class="img-fluid mb-2"
       />
       <img
         src="images/portfolio/28.jpg"
-        width="70%"
+        width="80%"
         alt=""
         class="img-fluid mb-2"
       />
       <img
         src="images/portfolio/29.jpg"
-        width="70%"
+        width="80%"
         alt=""
         class="img-fluid mb-2"
       />
       <img
         src="images/portfolio/30.jpg"
-        width="70%"
+        width="80%"
         alt=""
         class="img-fluid mb-2"
       />
+
       <img
         src="images/portfolio/31.jpg"
-        width="70%"
+        width="80%"
         alt=""
         class="img-fluid mb-2"
       />
     </div>
+    <a href="/portfolio.html#top-section" class="btn go-top">
+      <strong>Go Top</strong></a
+    >
+
+    <footer id="contact-me">
+      <div class="container">
+        <div class="text-muted mt-5 d-flex justify-content-between">
+          <div class="d-flex justify-content-center ms-5">
+            <div>
+              <img
+                src="/images/profile-pic.png"
+                alt=""
+                class="img-fluid d-inline p-2 m-0"
+                width="80px"
+              />
+            </div>
+            <div>
+              <p class="contact-me mt-3 me-5 pe-5">
+                Ahmad Farkhondeh <br />Industrial Designer
+              </p>
+            </div>
+          </div>
+
+          <div class="contact-me">
+            <i
+              class="fa fa-envelope email-icon pe-2 pb-2 pt-3"
+              aria-hidden="true"
+            ></i
+            >ahmadfarkhondeh1997@gmail.com
+
+            <br />
+            <i class="fa fa-phone" aria-hidden="true"></i>
+            +989368125532
+          </div>
+        </div>
+        <div class="social-links d-flex justify-content-center">
+          <div>
+            <a
+              href="https://www.linkedin.com/in/ahmad-farkhondeh/"
+              target="_blank"
+              ><i class="fa-brands fa-linkedin m-2" aria-hidden="true"></i
+            ></a>
+          </div>
+          <div>
+            <a
+              href="https://www.researchgate.net/profile/Ahmad-Farkhondeh-2"
+              target="_blank"
+            >
+              <i class="fa-brands fa-researchgate m-2"></i
+            ></a>
+          </div>
+          <div>
+            <a
+              href="https://orcid.org/0009-0007-1695-1563
+"
+              target="_blank"
+            >
+              <i class="fa-brands fa-orcid m-2"></i
+            ></a>
+          </div>
+        </div>
+
+        <p class="contact-me text-center text-muted mb-5">
+          © Ahmad Farkhondeh All Rights Reserved <br />coded by Ahmad Farkhondeh
+        </p>
+      </div>
+    </footer>
   </body>
 </html>
-m
